syntax = "proto3";

option csharp_namespace = "InventoryService.Protos";

service Inventory {
    rpc CheckStock (StockRequest) returns (StockResponse);
}

message StockRequest {
    int32 product_id = 1;
    int32 quantity = 2;
}

message StockResponse {
    bool is_available = 1;
    int32 available_quantity =  2;
}
